_manifests/env-local/platformPatch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron
spec:
  template:
    spec:
      containers:
        - name: cron
          volumeMounts:
            - name: tower-mail-cfg
              mountPath: /tower.yml
              subPath: "tower.yml"
      volumes:
        - name: tower-mail-cfg
          configMap:
            name: tower-mail-cfg
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
...
